<resources>
    <string name="place_holder">占位符</string>
    <string name="home_welcomes_link">home_welcomes_link</string>
    <string name="app_name">心云健康</string>
    <string name="indicator_home">首页</string>
    <string name="indicator_group">群组</string>
    <string name="indicator_measure">检测</string>
    <string name="indicator_service">服务</string>
    <string name="indicator_setting">设置</string>
    <string name="share_mcloud">心云</string>
    <string name="share_wx_friends">朋友圈</string>
    <string name="share_wx">微信</string>
    <string name="share_sms">短信</string>
    <string name="share_email">邮件</string>
    <string name="share_choose_carried">选择</string>
    <string name="todo"></string>
    <string name="group_owner">群主</string>
    <string name="phone">手机</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="wechat">微信</string>
    <string name="sms">短信</string>
    <string name="email_phone">手机/邮箱</string>
    <string name="id_card">身份证号</string>
    <string name="address">地址</string>
    <string name="dispose">处理</string>
    <string name="not_filled">未填写</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="please_input_email">请输入您的邮箱</string>
    <string name="please_input_idcard">请输入您的身份证号码</string>
    <string name="please_input_address">请输入您的详细地址</string>
    <string name="please_input_phone">请输入您的手机号码</string>
    <string name="illegal_email">邮箱不合法!</string>
    <string name="illegal_phone">手机号码不合法!</string>
    <string name="illegal_address">地址不合法!</string>
    <string name="illegal_name">姓名不合法!</string>
    <string name="illegal_idcard">身份证不合法!</string>
    <string name="input_null">输入为空！</string>
    <string name="infomation_tied_success">信息绑定成功!</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="nickname_">昵称:</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="gender_">性别：</string>
    <string name="age_">年龄：</string>
    <string name="age_unit">岁</string>
    <string name="avatar">头像</string>
    <string name="pregnancy">妊娠</string>
    <string name="body_state">身体状况</string>
    <string name="pre_production_date">预产日期</string>
    <string name="systolic_pressure">收缩压</string>
    <string name="diastolic_pressure">舒张压</string>
    <string name="pulse_pressure">脉压差</string>
    <string name="pressure_unit_mmhg">mmHg</string>
    <string name="pressure_unit_kpa">kpa</string>
    <string name="ear_temperature">耳温</string>
    <string name="ear_temperature_unit_before">o</string>
    <string name="ear_temperature_unit_after">C</string>
    <string name="ear_temperature_unit">℃</string>
    <string name="blood_sugar">血糖</string>
    <string name="blood_oxygen">血氧</string>
    <string name="blood_oxygen_saturation">血氧饱和度</string>
    <string name="blood_oxygen_unit">%</string>
    <string name="blood_pressure">血压</string>
    <string name="heart_rate">心率</string>
    <string name="heart_rate_unit">bpm</string>
    <string name="measure_times">测量次数</string>
    <string name="error_times">异常次数</string>
    <string name="times_unit">times</string>
    <string name="interval">-</string>
    <string name="no_value">--</string>
    <string name="static_no_value">---</string>
    <string name="no_time">--/--/--</string>
    <string name="register">注册</string>
    <string name="register_now">马上注册</string>
    <string name="register_personinfo">个人信息</string>
    <string name="register_personinfo_explain">请填写完整的信息，以便我们做出更准确、更完整的健康分析！</string>
    <string name="register_explain_choose_device">请选择您需要检测的设备</string>
    <string name="register_explain_choose_device_warn">还没有心云设备！\n你也可以点击完成，以后再添加！</string>
    <string name="register_explain_input_account">请输入帐号</string>
    <string name="register_explain_input_password">请输入密码</string>
    <string name="register_account_illegal">请输入正确的手机号或邮箱号</string>
    <string name="register_account_exist">该帐号已经被注册，请重新输入</string>
    <string name="register_password_illagel">密码为6&#8211;16位英文或数字，请重新输入</string>
    <string name="register_progress_error">注册流程中出现异常，请尝试重新注册！</string>
    <string name="unexpected_error">未知的错误，请重新注册</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="please_select_age">请选择年龄</string>
    <string name="please_select_gender">请选择性别</string>
    <string name="nick_name_illegal">昵称格式错误，请重新输入</string>
    <string name="login">登录</string>
    <string name="logining">登录中…</string>
    <string name="logining_offline">离线登录中……</string>
    <string name="login_password_input">请输入密码</string>
    <string name="login_password_forget">忘记密码</string>
    <string name="login_param_error">帐号或密码错误，请重新输入</string>
    <string name="login_param_empty">请检查您的登录信息是否完整</string>
    <string name="login_account_hint">手机号/邮箱</string>
    <string name="illage_password_field">密码输入不合法</string>
    <string name="illage_account_field">帐号输入不合法</string>
    <string name="checkcode_success_send">验证码已发送至%1$s%2$s</string>
    <string name="checkcode_hint_input">请输入验证码</string>
    <string name="checkcode_error_verify">您输入的验证码错误，请重新输入</string>
    <string name="checkcode_get">获取验证码</string>
    <string name="checkcode_reget">重新发送</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_param_error">请验证输入是否正确</string>
    <string name="forget_param_empty">请验证输入是否完整</string>
    <string name="reset_password_input">输入新密码</string>
    <string name="reset_account_input">请输入帐号</string>
    <string name="reset_password">设置新密码</string>
    <string name="reset_password_success">新密码设置成功</string>
    <string name="reset_password_error">密码为6–16位英文或数字，请重新输入</string>
    <string name="reset_account_not_register">该用户未注册</string>
    <string name="action_next">下一步</string>
    <string name="action_choose_device">选择设备</string>
    <string name="action_cancel">取消</string>
    <string name="action_confirm">确定</string>
    <string name="action_invite">邀请</string>
    <string name="action_add">添加</string>
    <string name="action_complete">完成</string>
    <string name="action_search">搜索</string>
    <string name="action_delete">删除</string>
    <string name="action_exit_group">退群</string>
    <string name="action_dissolve_group">解散</string>
    <string name="action_send">发送</string>
    <string name="module_bloodpressure_description">我是血压模块的描述</string>
    <string name="module_bloodoxygen_description">我是血氧模块的描述</string>
    <string name="module_bloodoxygen">血氧模块</string>
    <string name="module_bloodpressure">血压模块</string>
    <string name="module_temperture">耳温模块</string>
    <string name="module_temperture_description">我是耳温模块的描述</string>
    <string name="ea_label_tag">请输入标签</string>
    <string name="ea_label_msg">设置提醒名称</string>
    <string name="ea_ti_app">事件</string>
    <string name="as_notif_constant">测量提醒服务</string>
    <string name="as_nm_launched">测量提醒!</string>
    <string name="remind_next_time">下一次提醒时间：%s</string>
    <string name="remind_next_time_start">提醒在%s后开启</string>
    <string name="as_nt_launched">提醒程序已经启动!!!</string>
    <string name="sa_btn_snooze">延迟提醒!</string>
    <string name="sa_btn_unsnooze">取消延迟提醒!</string>
    <string name="sa_btn_dismiss">关闭提醒</string>
    <string name="sa_btn_dismiss_and_kill">关闭提醒与应用</string>
    <string name="sa_create_by">该提醒由%s创建!</string>
    <string name="sa_ring_select">选择提醒铃声</string>
    <string name="as_stat_on_msg">The status bar notification is now ON and will be displayed whenever an alarm is enabled.</string>
    <string name="as_stat_off_msg">The status bar notification is now OFF.</string>
    <string name="reminder_measure">测量提醒</string>
    <string name="reminder_cycle">提醒周期</string>
    <string name="reminder_edit">编辑提醒</string>
    <string name="reminder_time">6:00</string>
    <string name="reminder_time_set">每天</string>
    <string name="reminder_work_day_set">工作日</string>
    <string name="reminder_rest_day_set">休息日</string>
    <string name="is_delete_alarm">是否删除?</string>
    <string name="week_space">周%s、</string>
    <string name="clock_view_text_ss">%s秒</string>
    <string name="clock_view_text_mm_ss">%1$s分%2$s秒</string>
    <string name="clock_view_text_hh_mm_ss">%1$s时%2$s分%3$s秒</string>
    <string name="clock_view_text_dd_hh_mm_ss">%1$s天%2$s时%3$s分%4$s秒</string>
	<string name="clock_add">添加提醒</string>
    <string name="clock_edit">编辑提醒</string>
    <string name="clock_time">时间</string>
    <string name="clock_tag_reacher_limit">标签大小达到限制</string>
    <string name="clock_open">开启提醒</string>
    <string name="clock_mode">重复</string>
    <string name="clock_never_repeat">不重复</string>
    <string name="clock_note">标签</string>
    <string name="clock_note_content">检查血压</string>
    <string name="mon">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="never_repeat">不重复</string>
    <string name="date_title">日期</string>
    <string name="please_choose">请选择:</string>
    <string name="date_picker">日期选择器:</string>
    <string name="time_picker">时间选择器:</string>
    <string name="sex_picker">性别选择器:</string>
    <string name="today">今天 </string>
    <string name="yesterday">昨天 </string>
    <string name="hoursAgo">小时前</string>
    <string name="minutesAgo">分钟前</string>
    <string name="daysAgo">天前</string>
    <string name="justNow">刚刚</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="hold_on">请稍后</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_no_new_version">当前版本已经是最新！</string>
    <string name="check_update_connection_timeout">检查更新超时！</string>
    <string name="alert_error">错误提示</string>
    <string name="alert_exit_measure">退出测量</string>
    <string name="alert_restart">重新测量</string>
    <string name="alert_title">提示</string>
    <string name="alert_content">是否放弃本次测量？</string>
    <string name="group_notify_invite_into">邀请您加入群</string>
    <string name="group_notify_agree">已同意</string>
    <string name="group_notify_refuse">已拒绝</string>
    <string name="group_notify_success_join">%1$s同意加入您的%2$s群</string>
    <string name="group_notify_refuse_join">%1$s拒绝加入您的%2$s群</string>
    <string name="group_notify_kick">您已经被踢出了%s群</string>
    <string name="group_notify_quite">%1$s已经退出了您的%2$s群</string>
    <string name="group_notify_dismiss">%s群已经解散</string>
    <string name="group_normal_empty_hint">您可以创建一个群</string>
    <string name="group_service_empty_hint">您未加入任何服务群</string>
    <string name="group_extra_empty_hint">请进入群添加关注的人</string>
    <string name="group_inviter_hint">输入心云帐号</string>
    <string name="group_notify">通知</string>
    <string name="group_resource">群资料</string>
    <string name="group_create">创建群</string>
    <string name="group_create_hint">请输入群名称</string>
    <string name="group_create_success">创建成功</string>
    <string name="group_perfect_data">完善群资料</string>
    <string name="group_invite_member">邀请成员</string>
    <string name="setting_about_provider">铭众医疗出品</string>
    <string name="setting_hint_old_input_password">请输入原密码</string>
    <string name="setting_hint_new_input_password">请输入新密码</string>
    <string name="complete">完成</string>
    <string name="home_welcomes">欢迎使用心云</string>
    <string name="home_welcomes_ad2"><u>请点击添加</u></string>
    <string name="home_welcomes_ad3">您当前还没有任何%s数据</string>
    <string name="introduce_cloud">\u3000\u3000心云健康关注用户及用户家人健康状况，注重健康沟通，随时随地为用户提供全面的健康服务。\n\u3000\u3000心云健康通过各类智能移动通信终端，将测量数据与云端同步，并整合了强大的数据分析处理系统、专业的规则库及知识库系统。</string>
</resources>