<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.medzone.mcloud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightgrey"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:textColor="@color/font_input_dark"
        android:textColorHint="@color/font_hint_dark" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_top" />

        <com.medzone.cloud.ui.widget.CleanableEditText
            android:id="@+id/ce_edit_account"
            style="@style/InputTextViewWithDrawable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_input_height"
             android:drawableLeft="@drawable/loginview_ic_account"
            android:drawableRight="@drawable/common_ic_cancle"
            android:focusableInTouchMode="true"
            android:hint="@string/login_account_hint"
            android:imeActionLabel="@string/action_next"
            android:imeOptions="actionNext"
            android:singleLine="true"
            app:maxbytes="@integer/limit_account" >
        </com.medzone.cloud.ui.widget.CleanableEditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bottom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginBottom="@dimen/register_item_margin_bottom"
        android:layout_marginTop="@dimen/register_icon_progress_margin_top"
        android:orientation="horizontal" >

        <com.medzone.cloud.ui.widget.CleanableEditText
            android:id="@+id/edit_code"
            style="@style/RegisterNormalEditDrawable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_button_height"
            android:layout_marginLeft="@dimen/register_item_margin_left"
            android:layout_marginRight="@dimen/register_item_margin_mid"
            android:layout_weight="1"
            android:drawableRight="@drawable/common_ic_cancle"
            android:gravity="left|fill_vertical"
            android:hint="@string/checkcode_hint_input"
            android:imeActionLabel="@string/complete"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:paddingLeft="@dimen/check_code_padding_horizal"
            android:singleLine="true"
            app:maxbytes="@integer/limit_checkcode" />

        <Button
            android:id="@+id/button_send_code"
            style="@style/GetCheckCodeDrawable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_button_height"
            android:layout_marginRight="@dimen/register_item_margin_right"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/checkcode_get" />
        <!-- style="@style/GetCheckCodeDrawable" -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/layout2"
        android:layout_alignRight="@+id/layout2"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="@dimen/register_item_margin_left"
        android:paddingRight="@dimen/register_item_margin_right" >

        <Button
            android:id="@+id/subResetPwd"
            style="@style/ConfirmButtonDrawable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_button_height"
            android:enabled="true"
            android:text="@string/action_confirm" />
    </LinearLayout>

</RelativeLayout>