<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sl_root_layout"
    android:layout_width="@dimen/service_clock_snooze_width"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_marginTop="@dimen/service_clock_snooze_margin_top"
        android:id="@+id/tv_clock_time"
        style="@style/ClockNormalStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sa_btn_snooze" />

    <TextView
        android:id="@+id/tv_clock_label"
        style="@style/ClockNormalStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sa_btn_snooze" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sl_btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:text="@string/sa_btn_dismiss" >
        </Button>

        <Button
            android:id="@+id/sl_btn_dismiss_and_kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:text="@string/sa_btn_dismiss_and_kill"
            android:visibility="gone" >
        </Button>
    </LinearLayout>

</LinearLayout>