<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.medzone.mcloud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightgrey"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        style="@style/RegisterExplainTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regisiter_person_margin_bottom"
        android:layout_marginLeft="@dimen/regisiter_person_margin_left"
        android:layout_marginRight="@dimen/regisiter_person_margin_right"
        android:layout_marginTop="@dimen/regisiter_person_margin_top"
        android:text="@string/register_personinfo_explain" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/regisiter_person_confirm_margin_bottom"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_input_height"
            android:background="@drawable/public_input_box"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/regisiter_person_margin_left"
                android:paddingRight="@dimen/regisiter_person_margin_right"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal_item" />

            <com.medzone.cloud.ui.widget.CleanableEditText
                android:id="@+id/ce_edit_nickname"
                style="@style/RegisterNormalEditDrawable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/common_ic_cancle"
                android:gravity="right|center_vertical"
                android:inputType="text"
                android:imeOptions="actionGo"
                android:imeActionLabel="@string/action_complete"
                android:paddingRight="@dimen/regisiter_person_margin_right"
                app:maxbytes="@integer/limit_nickname" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:alpha="@dimen/two_tenth"
            android:background="@color/divider_mid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_input_height"
            android:background="@drawable/public_input_box"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/regisiter_person_margin_left"
                android:paddingRight="@dimen/regisiter_person_margin_right"
                android:text="@string/birthday"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal_item" />

            <TextView
                android:id="@+id/edit_birthday"
                style="@style/RegisterNormalEditDrawable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:paddingRight="@dimen/regisiter_person_margin_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:alpha="@dimen/two_tenth"
            android:background="@color/divider_mid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_input_height"
            android:background="@drawable/public_input_box"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/regisiter_person_margin_left"
                android:paddingRight="@dimen/regisiter_person_margin_right"
                android:text="@string/gender"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal_item" />

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/rigister_icon_padding" >

                <RadioButton
                    android:id="@+id/radio_male"
                    style="@style/RegisterNormalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/rigister_icon_padding"
                    android:button="@null"
                    android:drawableRight="@drawable/selector_gender_radio"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    style="@style/RegisterNormalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:drawableRight="@drawable/selector_gender_radio"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bottom" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/ConfirmButtonDrawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="@dimen/regisiter_person_confirm_padding"
        android:layout_marginRight="@dimen/regisiter_person_confirm_padding"
        android:enabled="true"
        android:text="@string/register" />

</LinearLayout>