<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.medzone.mcloud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightgrey"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/setting_top_item_margin_top"
        android:background="@color/divider_top" />

    <com.medzone.cloud.ui.widget.CleanableEditText
        android:id="@+id/ce_setting_change_password_old"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:background="@drawable/public_input_box"
        android:drawableRight="@drawable/common_ic_cancle"
        android:hint="@string/setting_hint_old_input_password"
        android:inputType="textVisiblePassword"
        android:imeOptions="actionNext"
        android:paddingLeft="@dimen/setting_edit_nickname_padding_left"
        app:maxbytes="@integer/limit_password" >
    </com.medzone.cloud.ui.widget.CleanableEditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_bottom" />

    <com.medzone.cloud.ui.widget.CleanableEditText
        android:id="@+id/ce_setting_change_password_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:background="@drawable/public_input_box"
        android:drawableRight="@drawable/common_ic_cancle"
        android:hint="@string/setting_hint_new_input_password"
        android:inputType="textVisiblePassword"
        android:imeOptions="actionGo"
        android:imeActionLabel="@string/action_confirm"
        android:paddingLeft="@dimen/setting_edit_nickname_padding_left"
        app:maxbytes="@integer/limit_password" >
    </com.medzone.cloud.ui.widget.CleanableEditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_bottom" />

</LinearLayout>